--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString1": "Data Source=(LocalDB)\\MSSQLLocalDB;Server=(localdb)\\mssqllocaldb;Database=eTicketsDb;Integrated Security=True;Connect Timeout=30;TrustServerCertificate=true;Trusted_Connection=true",
+    //"DefaultConnectionString1": "Data Source=(LocalDB)\\MSSQLLocalDB;Server=(localdb)\\mssqllocaldb;Database=eTicketsDb;Integrated Security=True;Connect Timeout=30;TrustServerCertificate=true;Trusted_Connection=true"
     "DefaultConnectionString2": "Data Source=DESKTOP-1AJVCEC\\SQLEXPRESS;Database=eTicketsDb;Integrated Security=True;Connect Timeout=30;TrustServerCertificate=true;Trusted_Connection=true"
   },
   "AllowedHosts": "*"
